--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,33 +1,38 @@
 html,
 body {
   height: 100%;
+  width: 100%;
 }
 
-body {
-  display: flex;
-  align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
-}
 
 .form-signin {
+ height:80%;
   max-width: 330px;
-  padding: 15px;
+  padding: 30px 15px;
 }
 
-.form-signin .form-floating:focus-within {
-  z-index: 2;
+.navbar-toggler {
+  border: none;
+  /* width: 1em; */
+  float: right;
 }
 
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
 
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+#footer{
+  position: absolute;
+    background-color: #e06666;
+    color:white;
+    font-family: Pacifico;
+    text-align: center;
+    /* padding: 0% 15%; */
+    width: 100%;
+    height: 10%;
+
+}
+@media only screen and (min-width: 120px) and (max-width: 991px) {
+    .my_container{
+
+      padding-bottom: 350px !important; //example
+
+    }
 }
