--- a/views/success.ejs
+++ b/views/success.ejs
@@ -7,20 +7,35 @@
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
       <script src='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.js'></script>
   <link href='https://api.mapbox.com/mapbox-gl-js/v2.9.1/mapbox-gl.css' rel='stylesheet' />
+  <script src='https://unpkg.com/mapbox@1.0.0-beta9/dist/mapbox-sdk.min.js'></script>
+
   <style>
 /* body { margin: 0; padding: 0; } */
 #map { position:fixed;
    top: 60%;
    left: 50%;
-  
+
    margin-top: -9em; /*set to a negative number 1/2 of your height*/
    margin-left: -15em; /*set to a negative number 1/2 of your width*/
    border: 1px solid #ccc;
    background-color: #f3f3f3; }
+   .bg {
+    /* The image used */
+    background-image: url("/images/bg.jpg");
+
+    /* Full height */
+    height: 100%;
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 </style>
-  </head>
-  <body class="jumbotron jumbotron-fluid">
-    <div >
+</head>,
+  <body  >
+    <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <!-- <input type="hidden" id="fname" value=<%= city %>></input> -->
         <h1 class="display-4">The Temperature in <%= city %> is <%= temperature %> `C </h1>
@@ -28,13 +43,12 @@
         <img src=<%= image %> ></img>
     </div>
 </div>
-<script src='https://unpkg.com/mapbox@1.0.0-beta9/dist/mapbox-sdk.min.js'></script>
 
 <style>
-#geocoder-container > div {
+/* #geocoder-container > div {
 min-width: 50%;
-margin-left: 25%;
-}
+margin-left: 25%; */
+/* } */
 </style>
 <div id='map' style='width: 400px; height: 300px;'></div>
    <input type="hidden" id="fname" value=<%=city%>></input>
