--- a/views/data.ejs
+++ b/views/data.ejs
@@ -19,7 +19,7 @@
   </head>
   <body >
 
-      <nav class="navbar navbar-expand-md nav-light" style="background-color:#e06666;">
+      <nav class="navbar navbar-expand-lg nav-light" style="background-color:#e06666;">
         <span>
           <a class="navbar-brand ms-3" style="color:white;font-family:Pacifico;font-size:1.5rem;">
              <img src="images/temp2.jpg"  width="7%" height="7%" class="my-auto me-1">Weather App</a>
