--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Roboto+Flex:opsz@8..144&family=Source+Sans+Pro&display=swap" rel="stylesheet">
   </head>
   <body>
-      <nav class="navbar navbar-expand-lg nav-light" style="background-color:#e06666;">
+      <nav class="navbar navbar-expand-md nav-light" style="background-color:#e06666;">
         <span>
           <a class="navbar-brand ms-3" style="color:white;font-family:Pacifico;font-size:1.5rem;">
              <img src="images/temp2.jpg"  width="7%" height="7%" class="my-auto me-1">Weather App</a>
