--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,8 +24,8 @@
 	border: 2px solid #CCCCCC;
 	border-radius: 8px;
 	font-size: 22px; /* Set input font size */
-	height: 30px;
-	line-height: 30px;
+	height: 40px;
+	line-height: 40px;
 	outline: medium none;
 	padding: 8px 12px;
 	width: 100%;
@@ -47,9 +47,9 @@
 	border: 1px solid rgba(0, 0, 0, 0.2);
 	border-radius: 8px;
 	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-	margin-top: 12px;
+	/* margin-top: 12px; */
 	padding: 8px 0;
-	width: 422px;
+	width: 100%;
 }
 .tt-suggestion {
 	font-size: 22px;  /* Set suggestion dropdown font size */
