fixed sunrise and sunset

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -117,7 +117,7 @@ console.log(cars);
    </div>
 
       </nav>
-      <main class="form-signin w-100 mx-auto my-auto text-center pt-5">
+      <main class="form-signin w-100 text-center ">
 
         <form action="/" method="post" class="pt-5">
           <img class="mb-4" src="/images/temp4.png" alt="" width="72" height="57">
