--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,8 @@ body {
 .form-signin {
  height:80%;
   max-width: 330px;
-  padding: 30px 15px;
+  padding: auto auto;
+  margin:auto auto;
 }
 
 .navbar-toggler {
