--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,7 +95,7 @@ console.log(cars);
 });</script>
   </head>
   <body>
-      <nav class="navbar navbar-expand-md nav-light" style="background-color:#e06666;">
+      <nav class="navbar navbar-expand-lg nav-light" style="background-color:#e06666;">
         <span>
           <a class="navbar-brand ms-3" style="color:white;font-family:Pacifico;font-size:1.5rem;">
              <img src="images/temp2.jpg"  width="7%" height="7%" class="my-auto me-1">Weather App</a>
@@ -117,9 +117,9 @@ console.log(cars);
    </div>
 
       </nav>
-      <main class="form-signin w-100 text-center ">
+      <main class="form-signin">
 
-        <form action="/" method="post" class="pt-5">
+        <form action="/" method="post" style="padding-top:40%;margin-top:1%;">
           <img class="mb-4" src="/images/temp4.png" alt="" width="72" height="57">
           <h1 class="h3 mb-3 fw-normal"  style="font-family:Source Sans Pro;">Weather</h1>
 
