--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,8 +8,10 @@ body {
 .form-signin {
  height:80%;
   max-width: 330px;
-  padding: auto auto;
+  /* padding: auto auto; */
+  /* padding: 50% auto; */
   margin:auto auto;
+text-align:center;
 }
 
 .navbar-toggler {
@@ -33,7 +35,9 @@ body {
 @media only screen and (min-width: 120px) and (max-width: 991px) {
     .my_container{
 
-      padding-bottom: 350px !important; //example
+      padding-bottom: 60% !important; //example
+      margin-bottom:19% !important;
 
     }
+
 }
