--- a/views/data.ejs
+++ b/views/data.ejs
@@ -19,7 +19,7 @@
   </head>
   <body >
 
-      <nav class="navbar navbar-expand-md nav-light" style="background-color:#e06666;">
+      <nav class="navbar navbar-expand-lg nav-light" style="background-color:#e06666;">
         <span>
           <a class="navbar-brand ms-3" style="color:white;font-family:Pacifico;font-size:1.5rem;">
              <img src="images/temp2.jpg"  width="7%" height="7%" class="my-auto me-1">Weather App</a>
@@ -69,7 +69,7 @@
 
               <!-- <h1 style="font-family:Pacifico;text-align:center;font-size:2rem;margin:5%0%;font-weight:normal" onclick="func(event)"> -->
                 <!-- <a href="https://avadicrpf.kvs.ac.in/" target="_blank" style="text-decoration:none;color:black;" >Kendriya Vidyalaya,Avadi</a></h1> -->
-             <div id='map1'  style="margin-left: 5%;width:90%; height:90%;padding: auto;text-align:center;  margin-bottom:30px;"></div>
+             <div id='map1'  style="margin-left: 5%;width:90%; height: 330px;padding: auto;text-align:center;  margin-bottom:30px;"></div>
               <input type="hidden" id="fname" value=<%=city%>></input>
 
 
