--- a/views/location2.ejs
+++ b/views/location2.ejs
@@ -55,7 +55,8 @@
             <p style="font-family:Playfair;text-align:left;font-size:2.0rem;margin:3%0%;" class="card-text">Description:It's <%=description%> <img src=<%=image%>  width="7%" height="7%" class="my-auto me-1"></p>
                <p style="font-family:Playfair;text-align:left;font-size:2.0rem;margin:3%0%;"class="card-text">Temperature:<%=temperature%>`C</p>
                   <p style="font-family:Playfair;text-align:left;font-size:2.0rem;margin:3%0%;" class="card-text">Sunrise:<%=sunrise%></p>
-                     <p style="font-family:Playfair;text-align:left;font-size:2.0rem;margin-top:3%;margin-bottom:5%;" class="card-text">Sunset:<%=sunset%></p>
+                     <p style="font-family:Playfair;text-align:left;font-size:2.0rem;margin:3%0%;" class="card-text">Sunset:<%=sunset%></p>
+                     <p style="font-family:Playfair;text-align:left;font-size:2.0rem;margin:3%0%" class="card-text">Country:<%=country%></p>
             </div>
         </div>
 
@@ -69,7 +70,7 @@
 
               <!-- <h1 style="font-family:Pacifico;text-align:center;font-size:2rem;margin:5%0%;font-weight:normal" onclick="func(event)"> -->
                 <!-- <a href="https://avadicrpf.kvs.ac.in/" target="_blank" style="text-decoration:none;color:black;" >Kendriya Vidyalaya,Avadi</a></h1> -->
-             <div id='map1'  style="margin-left: 5%;width:90%; height: 330px;padding: auto;text-align:center;  margin-bottom:30px;"></div>
+             <div id='map1'  style="margin-left: 5%;width:90%; height: 95%;padding: auto;text-align:center;  margin-bottom:30px;"></div>
               <input type="hidden" id="fname" value=<%=city%>></input>
               <input type="hidden" id="lat" value=<%=lat%>></input>
               <input type="hidden" id="long" value=<%=long%>></input>
