--- a/views/data.ejs
+++ b/views/data.ejs
@@ -70,7 +70,7 @@
 
               <!-- <h1 style="font-family:Pacifico;text-align:center;font-size:2rem;margin:5%0%;font-weight:normal" onclick="func(event)"> -->
                 <!-- <a href="https://avadicrpf.kvs.ac.in/" target="_blank" style="text-decoration:none;color:black;" >Kendriya Vidyalaya,Avadi</a></h1> -->
-             <div id='map1'  style="margin-left: 5%;width:90%; height: 95%;padding: auto;text-align:center;  margin-bottom:30px;"></div>
+             <div id='map1'  style="margin-left: 5%;width:95%; height: 350px;padding: auto;text-align:center;  margin-bottom:30px;"></div>
               <input type="hidden" id="fname" value=<%=city%>></input>
 
 
